crates/runtime/tests/acceleration/snapshots/integration__acceleration__partition_by_cayenne__bucket_partition_id_in_filter.snap
---
source: crates/runtime/tests/acceleration/partition_by_cayenne.rs
expression: sanitized_plan
---
FilterExec: id@0 = 1 OR id@0 = 5
  SchemaCastScanExec
    UnionExec
      BytesProcessedExec
        DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, age, city, score], file_type=vortex
      BytesProcessedExec
        DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, age, city, score], file_type=vortex
