crates/runtime/tests/acceleration/snapshots/integration__acceleration__partition_by_cayenne__date_partition_date_range_filter.snap
---
source: crates/runtime/tests/acceleration/partition_by_cayenne.rs
expression: sanitized_plan
---
FilterExec: order_date@2 >= 2024-03-01 AND order_date@2 < 2024-04-01
  SchemaCastScanExec
    PartitionedUnionExec
      CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0
        BytesProcessedExec
          EmptyExec
      CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0
        BytesProcessedExec
          EmptyExec
      CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0
        BytesProcessedExec
          EmptyExec
      CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0
        BytesProcessedExec
          EmptyExec
      CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
        BytesProcessedExec
          DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, order_date, amount], file_type=vortex, predicate: order_date@2 >= 2024-03-01 AND order_date@2 < 2024-04-01
