crates/runtime/tests/acceleration/snapshots/integration__acceleration__partition_by_cayenne__date_partition_month_equals_filter.snap
---
source: crates/runtime/tests/acceleration/partition_by_cayenne.rs
expression: sanitized_plan
---
FilterExec: date_part(month, order_date@2) = 3
  SchemaCastScanExec
    CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
      BytesProcessedExec
        DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, order_date, amount], file_type=vortex
