crates/runtime/tests/acceleration/snapshots/integration__acceleration__partition_by_cayenne__multi_partition_full_scan.snap
---
source: crates/runtime/tests/acceleration/partition_by_cayenne.rs
expression: plan_str
---
BytesProcessedExec
  SchemaCastScanExec
    UnionExec
      DataSourceExec: file_groups={1 group: [[Users/lukim/dev/spice2/crates/runtime/.spice/data/multi_partition_test/expr0=80/8/019a4c74-8b45-7940-80e7-05662efba359/vL9mxCrsZfsnRSc1_0.vortex]]}, projection=[id, name, age, city, score], file_type=vortex
      DataSourceExec: file_groups={1 group: [[Users/lukim/dev/spice2/crates/runtime/.spice/data/multi_partition_test/expr0=70/6/019a4c74-8b39-7152-ac47-364b24405a13/ysySuGPFzThswyXU_0.vortex]]}, projection=[id, name, age, city, score], file_type=vortex
      DataSourceExec: file_groups={1 group: [[Users/lukim/dev/spice2/crates/runtime/.spice/data/multi_partition_test/expr0=90/7/019a4c74-8b3e-74b1-9459-dd85dc88a725/uObSy27qXqZWJjq2_0.vortex]]}, projection=[id, name, age, city, score], file_type=vortex
