crates/runtime/tests/acceleration/snapshots/integration__acceleration__partition_by_cayenne__multi_partition_id_filter.snap
---
source: crates/runtime/tests/acceleration/partition_by_cayenne.rs
expression: sanitized_plan
---
FilterExec: id@0 = 1
  RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=2
    SchemaCastScanExec
      PartitionedUnionExec
        CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0
          BytesProcessedExec
            EmptyExec
        CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
          BytesProcessedExec
            DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, age, city, score], file_type=vortex, predicate: id@0 = 1
